crates/apollo-compiler/test_data/diagnostics/0019_enum_definition_with_duplicate_values.txt
Error: duplicate definitions for the `CAT` value of enum type `Pet`
    ╭─[ 0019_enum_definition_with_duplicate_values.graphql:10:5 ]
    │
  7 │     CAT
    │     ─┬─  
    │      ╰─── previous definition of `CAT` here
    │ 
 10 │     CAT
    │     ─┬─  
    │      ╰─── `CAT` redefined here
────╯
Error: duplicate definitions for the `THRIVE_PET_FOODS` value of enum type `Snack`
    ╭─[ 0019_enum_definition_with_duplicate_values.graphql:17:5 ]
    │
 14 │     THRIVE_PET_FOODS
    │     ────────┬───────  
    │             ╰───────── previous definition of `THRIVE_PET_FOODS` here
    │ 
 17 │     THRIVE_PET_FOODS
    │     ────────┬───────  
    │             ╰───────── `THRIVE_PET_FOODS` redefined here
────╯

